# src/routes/UserRoute.ts
@@ -1,9 +1,10 @@
 import { Router } from "express";
 import { GetUserTasks, GetUsers } from "~controllers/UserControllers";
+import AuthMiddleware from "~middleware/AuthMiddleware";
 
 const router = Router();
 
-router.get("/", GetUsers);
-router.get("/:id/tasks", GetUserTasks);
+router.get("/", AuthMiddleware, GetUsers);
+router.get("/:id/tasks", AuthMiddleware, GetUserTasks);
 
 export const UserRouter = router;
