# src/utils/swagger.yaml
@@ -168,7 +168,7 @@ paths:
         400:
           description: Malformed data
         401:
-          description: Invalid Credentials
+          description: Unauthorized
         500:
           description: Server error
 
@@ -182,7 +182,7 @@ paths:
         202:
           description: Token revoked successfully
         401:
-          description: Invalid auth header
+          description: Unauthorized
         500:
           description: Server error
 
@@ -200,7 +200,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/User"
         401:
-          description: Invalid auth header
+          description: Unauthorized
         500:
           description: Server error
 
@@ -208,6 +208,8 @@ paths:
     get:
       summary: Get a list of all users
       tags: [User]
+      security:
+        - BearerAuth: []
       parameters:
         - in: query
           name: username
@@ -224,6 +226,8 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/User"
+        401:
+          description: Unauthorized
         500:
           description: Server error
 
@@ -231,6 +235,8 @@ paths:
     get:
       summary: Get tasks for a specific user
       tags: [User]
+      security:
+        - BearerAuth: []
       parameters:
         - in: path
           name: id
@@ -266,6 +272,9 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Task"
+
+        401:
+          description: Unauthorized
         400:
           description: Invalid user ID
         500:
@@ -275,6 +284,8 @@ paths:
     get:
       summary: Get a list of all tasks
       tags: [Task]
+      security:
+        - BearerAuth: []
       parameters:
         - in: query
           name: status
@@ -304,6 +315,8 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Task"
+        401:
+          description: Unauthorized
         500:
           description: Server error
     post:
@@ -344,7 +357,7 @@ paths:
                 type: string
                 description: How data was malformed
         401:
-          description: Invalid auth header
+          description: Unauthorized
         500:
           description: Server error
 
@@ -352,6 +365,8 @@ paths:
     get:
       summary: Get details of a specific task
       tags: [Task]
+      security:
+        - BearerAuth: []
       parameters:
         - in: path
           name: id
@@ -366,6 +381,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Task"
+        401:
+          description: Unauthorized
         404:
           description: Unknown task ID
         500:
@@ -415,7 +432,7 @@ paths:
                 type: string
                 description: How data was malformed
         401:
-          description: Invalid auth header
+          description: Unauthorized
         403:
           description: Not authorized to access this material
         404:
@@ -438,7 +455,7 @@ paths:
         200:
           description: Task deleted successfully
         401:
-          description: Invalid auth header
+          description: Unauthorized
         403:
           description: Not authorized to access this material
         404:
